@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2007, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,13 +25,13 @@
  * @test
  * @bug 4818598
  * @summary Tests Class value encoding
- * @run main/othervm -Djava.security.manager=allow java_lang_Class
+ * @run main/othervm java_lang_Class
  * @author Sergey Malenkov
  */
 
 public final class java_lang_Class extends AbstractTest<Class> {
     public static void main(String[] args) {
-        new java_lang_Class().test(true);
+        new java_lang_Class().test();
     }
 
     protected Class getObject() {
